Fix page top hidden behind fixed nav: add padding-top: 64px to body

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   background: var(--navy);
   color: var(--white);
   overflow-x: hidden;
+  padding-top: 64px;
 }
 
 /* LANG SWITCH */
